[package]
name = "mkpm"
version = "0.1.0"
edition = "2021"
license = "GPL"
description = "A Package Manager for MKProject Applications"
author = "Mustafif Khan"
homepage = "http://mkproj.com"
repository = ""
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde={version="1.0", features=["derive"]}
structopt = "0.3.25"
serde_json = "1.0"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
indicatif = "0.17.0-beta.1"